// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph it should render a single paragraph 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  margin-bottom: 1.5rem;
  font-size: 0.875rem;
  line-height: 1.714285714;
  font-weight: 400;
  color: #282a2b;
}

<div
  className="emotion-1"
>
  <p
    className="emotion-0"
    fontSize="fontSize30"
    fontWeight="fontWeightNormal"
  >
    This is a paragraph
  </p>
</div>
`;

exports[`Paragraph it should render a single paragraph with bold text 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  margin-bottom: 1.5rem;
  font-size: 0.875rem;
  line-height: 1.714285714;
  font-weight: 400;
  color: #282a2b;
}

<div
  className="emotion-1"
>
  <p
    className="emotion-0"
    fontSize="fontSize30"
    fontWeight="fontWeightNormal"
  >
    <strong>
      This is a paragraph with bold text
    </strong>
  </p>
</div>
`;

exports[`Paragraph it should render a single paragraph with italic text 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  margin-bottom: 1.5rem;
  font-size: 0.875rem;
  line-height: 1.714285714;
  font-weight: 400;
  color: #282a2b;
}

<div
  className="emotion-1"
>
  <p
    className="emotion-0"
    fontSize="fontSize30"
    fontWeight="fontWeightNormal"
  >
    <i>
      This is a paragraph with italic text
    </i>
  </p>
</div>
`;
